# django-maintenance-mode

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql-analysis.yml  create-release.yml  openssf-scorecard.yml  pre-commit-autoupdate.yml  pythonpackage.yml  test-package.yml
maintenance_mode/: __init__.py  backends.py  context_processor.py  context_processors.py  core.py  decorators.py  http.py  io.py  logging.py  metadata.py  middleware.py  settings.py  tests.py  tests_urls.py  urls.py  utils.py  version.py  views.py
maintenance_mode/management/commands/: maintenance_mode.py
maintenance_mode/templates/: 503.html
tests/: base.py  functions.py  settings.py  test_backends.py  test_core.py  test_decorators.py  test_http.py  test_io.py  test_logging.py  test_management_commands.py  test_metadata.py  test_middleware.py  test_package.py  test_views.py  tests.py  urls.py  urls_admin.py  urls_not_configured.py  views.py
