[metadata]
name = django-maintenance-mode
version = attr: maintenance_mode.metadata.__version__
author = attr: maintenance_mode.metadata.__author__
author_email = attr: maintenance_mode.metadata.__email__
maintainer = attr: maintenance_mode.metadata.__author__
maintainer_email = attr: maintenance_mode.metadata.__email__
description = attr: maintenance_mode.metadata.__description__
keywords =
    django
    maintenance
    mode
    offline
    under
    503
    service
    temporarily
    unavailable
url = https://github.com/fabiocaccamo/django-maintenance-mode
download_url = https://github.com/fabiocaccamo/django-maintenance-mode/archive/0.18.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
requires = django (>= 3.0)
project_urls =
    Documentation = https://github.com/fabiocaccamo/django-maintenance-mode#readme
    Issues = https://github.com/fabiocaccamo/django-maintenance-mode/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    python-fsutil >= 0.9.2, < 1.0.0

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[flake8]
ignore = W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
